chore: update package.json and wrangler.toml for Cloudflare integration
- Added OpenNext.js Cloudflare package to dependencies.
- Removed @cloudflare/next-on-pages from dependencies.
- Updated wrangler version to 4.38.0.
- Added new scripts for preview and deployment using OpenNext.js.
- Updated compatibility date in wrangler.toml to 2025-03-25.
- Added assets configuration in wrangler.toml.
- Created open-next.config.ts for Cloudflare configuration.

--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "next dev --turbopack --port 3002",
     "build": "next build",
-    "pages:build": "npx @cloudflare/next-on-pages",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
+    "@opennextjs/cloudflare": "^1.8.3",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -34,7 +37,6 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.14",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
@@ -45,6 +47,6 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5",
-    "wrangler": "^4.32.0"
+    "wrangler": "^4.38.0"
   }
 }
