--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,7 @@
+main = ".open-next/worker.js"
 name = "ai-change-management-frontend"
-compatibility_date = "2024-09-23"
+compatibility_date = "2025-03-25"
 compatibility_flags = ["nodejs_compat"]
+[assets]
+directory = ".open-next/assets"
+binding = "ASSETS"
