--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "ai-change-management",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack --port 3002",
-    "build": "next build",
-    "build:cloudflare": "npx @opennextjs/cloudflare@1.8.3 build",
-    "build:full": "npm run build && npm run build:cloudflare",
-    "build:next": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
-  },
+"scripts": {
+  "dev": "next dev --turbopack --port 3002",
+  "build:next": "next build",
+  "build:cloudflare": "opennextjs-cloudflare build",
+  "build": "npm run build:cloudflare",
+  "start": "next start",
+  "lint": "next lint",
+  "preview": "npm run build:cloudflare && opennextjs-cloudflare preview",
+  "deploy": "npm run build:cloudflare && opennextjs-cloudflare deploy",
+  "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
+},
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
