--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "pptxgenjs": "^4.0.1",
@@ -43,6 +44,7 @@
     "@eslint/eslintrc": "^3",
     "@opennextjs/cloudflare": "^1.8.3",
     "@tailwindcss/postcss": "^4",
+    "@types/jszip": "^3.4.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
