--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@netlify/plugin-nextjs": "^5.13.3",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-checkbox": "^1.3.3",
