--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
     "@netlify/plugin-nextjs": "^5.13.3",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -39,6 +38,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
+    "resend": "^4.8.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
   },
