--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "docx": "^9.5.1",
     "jszip": "^3.10.1",
     "lucide-react": "^0.539.0",
-    "next": "15.4.10",
+    "next": "^15.4.11",
     "pptxgenjs": "^4.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@opennextjs/cloudflare": "^1.8.3",
+    "@opennextjs/cloudflare": "^1.16.2",
     "@tailwindcss/postcss": "^4",
     "@types/jszip": "^3.4.0",
     "@types/node": "^20",
